packages/yew-macro/tests/html_macro/html-match-fail.stderr
error: missing expression for `match`
 --> tests/html_macro/html-match-fail.rs:5:19
  |
5 |     html! { match {} };
  |                   ^^

error: this `match` expression has a scrutinee, but no body
 --> tests/html_macro/html-match-fail.rs:8:19
  |
8 |     html! { match 42 };
  |                   ^^

error: `match` expression must have at least one arm
  --> tests/html_macro/html-match-fail.rs:11:22
   |
11 |     html! { match 42 {} };
   |                      ^^

error: `break`, `continue`, and `return` in a match arm cannot be followed by HTML as their value. Wrap the arm body in braces, e.g. `_ => { return ::yew::html!(<span/>) }`.
  --> tests/html_macro/html-match-fail.rs:18:29
   |
18 |                 () => break <span/>,
   |                             ^

error: `break`, `continue`, and `return` in a match arm cannot be followed by HTML as their value. Wrap the arm body in braces, e.g. `_ => { return ::yew::html!(<span/>) }`.
  --> tests/html_macro/html-match-fail.rs:27:32
   |
27 |                 () => continue <div/>,
   |                                ^

error: `break`, `continue`, and `return` in a match arm cannot be followed by HTML as their value. Wrap the arm body in braces, e.g. `_ => { return ::yew::html!(<span/>) }`.
  --> tests/html_macro/html-match-fail.rs:37:34
   |
37 |                     () => return <p/>,
   |                                  ^

error: `break`, `continue`, and `return` in a match arm cannot be followed by HTML as their value. Wrap the arm body in braces, e.g. `_ => { return ::yew::html!(<span/>) }`.
  --> tests/html_macro/html-match-fail.rs:48:29
   |
48 |                 () => break <div/>
   |                             ^
